[tool.poetry]
name = "CaloCem"
version = "0.1.24"
description = "Handling TAM Air calorimetry files made easy."
authors = [
    "mj-hofmann <aCodingChemist@gmail.com>",
    "tgaedt <torben.gaedt@tum.de>"
]
license = "GNU GENERAL PUBLIC LICENSE"

repository = "https://github.com/mj-hofmann/CaloCem"
documentation = "https://mj-hofmann.github.io/CaloCem/"

# README file(s) are used as the package description
readme = "README.md"

packages = [{include = "calocem"}]

# Keywords (translated to tags on the package index)
keywords = ["calorimetry", "TAM Air", "TA Instruments", "analysis", "vizualisation"]

[tool.poetry.dependencies]
python = ">=3.10.1,<4"
numpy = "^2.1.1"
requests = "^2.28.1"
xlrd = "^2.0.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
pysnooper = "^1.1.1"
matplotlib = "^3.9.1"
pandas = "^2.1.1"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
flake8 = "^6.0.0"
tox = "^4.2.1"
PySnooper = "^1.1.1"
mkdocs-material = "^9.5.28"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-git-authors-plugin = "^0.9.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-table-reader-plugin = "^2.2.2"
mkdocs-jupyter = "^0.24.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =  py310, py311, py312, py313, mypy

[gh-actions]
python =
    3.10: py310, mypy
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
commands = pytest
"""
