[project]
name = "CaloCem"
version = "0.3.0"
description = "Handling TAM Air calorimetry files made easy."
authors = [
    { name = "mj-hofmann", email = "aCodingChemist@gmail.com" },
    { name = "tgaedt", email = "torben.gaedt@tum.de" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "calorimetry",
    "TAM Air",
    "TA Instruments",
    "analysis",
    "vizualisation",
]
dependencies = [
    "numpy>=2.1.1",
    "requests>=2.28.1",
    "xlrd>=2.0.1",
    "matplotlib>=3.9.1",
    "pandas>=2.1.1",
    "scipy>=1.14.1",
    "openpyxl>=3.1.5",
]

[project.urls]
Repository = "https://github.com/mj-hofmann/CaloCem"
Documentation = "https://mj-hofmann.github.io/CaloCem/"

[dependency-groups]
dev = [
    "mkdocs>=1.6.0",
    "flake8>=6.0.0",
    "tox>=4.2.1",
    "PySnooper>=1.1.1",
    "ipykernel>=6.30.1",
    "mkdocs-material>=9.5.28",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-table-reader-plugin>=2.2.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-jupyter>=0.25.1",
    "calocem",
]

[tool.hatch.build.targets.sdist]
include = ["calocem"]

[tool.hatch.build.targets.wheel]
include = ["calocem"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist =  py310, py311, py312, py313, mypy

[gh-actions]
python =
    3.10: py310, mypy
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
commands = pytest
"""

# [tool.uv.workspace]
# members = [
#     ".",
#     ".",
# ]

# [tool.uv.sources]
# calocem = { workspace = true, editable = true }
