[metadata]
name = TAInstCalorimetry
description = Handling TAM Air calorimetry files made easy
author = Matthias Hofmann
platform = win32
classifiers = 
    Programming Language :: Python :: 3

[options]
packages =
    TAInstCalorimetry
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
TAInstCalorimetry = py.typed

[flake8]
max-line-length = 160
    